k8s/addons/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projet-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: firstapp.com  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: angular-loadbalancer  
            port:
              number: 80
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: flask-service  
            port:
              number: 9090
